@@ -100,6 +100,7 @@
                     <value>
                       <list>
                         <string>your_site_title</string>
+                        <string>your_group_title</string>
                         <string>your_at_date</string>
                       </list>
                     </value>
